Eleccion request y css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <select name="razas">
 
         </select>
-        <button>Buscar foto</button><br>
+        <button>Buscar foto</button>
         <img src="">
     </main>
     <script src="script/main.js"></script>
